# langchain-talordata

./: README.md  pyproject.toml
src/langchain_talor_serp/: __init__.py  engines.py  schema.py  serialize.py  tool.py  wrapper.py
src/langchain_talor_serp/data/: bing.json  bing_images.json  bing_maps.json  bing_news.json  bing_shopping.json  google.json  google_flights.json  google_images.json  google_local.json  google_maps.json  google_news.json  google_patents_details.json  google_play_books.json  google_play_games.json  google_play_movies.json  google_scholar.json  google_scholar_author.json  google_scholar_cite.json  google_shopping.json  google_trends.json  google_web.json  index.json
src/langchain_talordata/: __init__.py  schema.py  tool.py  wrapper.py
src/langchain_talordata/data/: bing.json  bing_images.json  bing_maps.json  bing_news.json  bing_shopping.json  bing_videos.json  duckduckgo.json  google.json  google_finance.json  google_finance_markets.json  google_flights.json  google_hotels.json  google_images.json  google_jobs.json  google_lens.json  google_local.json  google_maps.json  google_news.json  google_patents.json  google_patents_details.json  google_play.json  google_play_books.json  google_play_games.json  google_play_movies.json  google_play_product.json  google_scholar.json  google_scholar_author.json  google_scholar_cite.json  google_shopping.json  google_trends.json  google_videos.json  google_web.json  index.json  (+1 more)
tests/: conftest.py  test_engines.py  test_integration.py  test_schema.py  test_serialize.py  test_tool.py  test_wrapper.py
